crates/ohno_macros/src/enrich_err/snapshots/ohno_macros__enrich_err__test_attrs__preserves_extern_abi.snap
---
source: crates/ohno_macros/src/enrich_err/test_attrs.rs
expression: format_tokens(result)
---
extern "C" fn test_function() -> Result<(), OhnoErrorType> {
    (|| { Ok(()) })()
        .map_err(|mut e| {
            let msg = "error in function test_function";
            ohno::Enrichable::add_enrichment(
                &mut e,
                ohno::EnrichmentEntry::new(msg, file!(), line!()),
            );
            e
        })
}
