crates/ohno_macros/src/enrich_err/snapshots/ohno_macros__enrich_err__test_attrs__preserves_generic_with_trait_bound.snap
---
source: crates/ohno_macros/src/enrich_err/test_attrs.rs
expression: format_tokens(result)
---
fn test_function<T: Display>(value: T) -> Result<(), OhnoErrorType> {
    (|| { Ok(()) })()
        .map_err(|mut e| {
            let msg = "error in function test_function";
            ohno::Enrichable::add_enrichment(
                &mut e,
                ohno::EnrichmentEntry::new(msg, file!(), line!()),
            );
            e
        })
}
